www/pages/styles/styles.css
:root {
  --body-background: #000;
  --content-background: #1a1a1a;
  --secondary-background: #202020;

  --text-color: #fff;
  --url-color: #7fffd4;

  --secondary-height: 6vh;
}

* {
  margin: 0;
  padding: 0;
  background: transparent;

  font-family: 'Consolas', 'monospace';
}

a {
  color: var(--url-color)
}

p, li {
  padding-top: 4px;
}

ul {
  padding-left: 20px;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  color: var(--text-color);
  background: var(--body-background);
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

img {
  padding: 8px;
}

.button {
  color: var(--text-color);
  background-color: transparent;
  /*font-size: 20px;*/
  /*flex-grow: 1;*/
  border: none;
  padding: 0;
}

.button:hover {
  color: var(--url-color);
  background-color: var(--content-background);
}

#header-tab-div {
  width: 100%;
  height: var(--secondary-height);
  background: var(--secondary-background);
  display: flex;
  justify-content: center;
  align-items: center;
}

#header-tab-container-div {
  width: 60%;
  background: transparent;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.section-div {
  align-self: center;
  width: 70vw;
  min-height: 100vh;
  background: var(--content-background);
}

.info-section {
  padding: 20px 24px 24px;
  font-size: 20px;
}

footer {
  background: var(--secondary-background);
  text-align: center;
  vertical-align: center;
  font-size: 10px;
  height: calc(var(--secondary-height) / 2);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

